# heartkit

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json  install.sh  postCreateCommand.sh
.github/workflows/: ci.yaml  docs.yaml  release-please-lock.yaml  release-please.yaml  release.yaml
api/datasets/: index.html
api/models/: index.html
architecture/: index.html
assets/: Untitled.vectornator
configs/: arr-2-eff-sm.json  arr-4-eff-lg.json  arr-4-eff-sm.json  arrhythmia-class-2-all.json  arrhythmia-class-2.json  arrhythmia-class-3.json  arrhythmia-class-8.json  arrhythmia-demo.json  beat-2-eff-sm.json  beat-3-eff-sm.json  beat-class-3.json  demo-arrhythmia.json  demo-beat.json  demo-segmentation.json  den-ppg-tcn-lg.json  den-ppg-tcn-sm.json  den-tcn-lg.json  den-tcn-sm.json  denoise-class-1.json  denoise-tcn.json  deploy-model.json  deploy-rhythm-model.json  diagnostic-class-2.json  diagnostic-class-5.json  download-dataset.json  download-datasets.json  evaluate-arrhythmia-model.json  evaluate-beat-model.json  evaluate-segmentation-model.json  evb-demo.json  evb-rhythm-demo.json  export-arrhythmia-model.json  export-beat-model.json  export-segmentation-model.json  finetune-segmentation-model.json  fnd-eff-lg.json  fnd-eff-sm.json  heartkit-demo.json  ppg2ecg-tcn-sm.json  pretrain-segmentation-model-ln.json  (+25 more)
configs/arrhythmia-class-2/: demo.json  evaluate.json  export.json  train.json
configs/arrhythmia-class-3/: demo.json  evaluate.json  export.json  train.json
configs/beat-class-2/: demo.json  evaluate.json  export.json  train.json
configs/beat-class-3/: demo.json  evaluate.json  export.json  train.json
configs/segmentation-class-2/: demo.json  evaluate.json  export.json  finetune.json  train.json
configs/segmentation-class-4/: demo.json  evaluate.json  export.json  finetune.json  train.json
configs/segmentation-tcn-class-2/: demo.json  evaluate.json  export.json  train.json
configs/segmentation-tcn-class-4/: evaluate.json  export.json  train.json
configs/segmentation-unext-class-4/: train.json
css/: custom.css
datasets/: README.md  index.html
db/: README.md
docs/: architecture.md  arrhythmia-demo.md  datasets.md  evb-setup.md  evb_demo.md  heartkit-demo.md  index.md  overview.md  quickstart.md  results.md
docs/api/: arrhythmia.md  beat.md  datasets.md  heartkit.md  models.md  segmentation.md  tasks.md
docs/arrhythmia/: demo.md  methods.md  overview.md  results.md
docs/assets/: arrhythmia-demo.html  arrhythmia-model-hw-table.md  arrhythmia-model-zoo-table.md  beat-model-hw-table.md  pk_ecg_synthetic_afib.html  rhythm-model-zoo-table.md  segmentation-model-hw-table.md  segmentation-model-zoo-table.md
docs/beat/: demo.md  methods.md  overview.md  results.md
docs/css/: custom.css  termynal.css
docs/datasets/: byod.md  icentia11k.md  index.md  lsad.md  ludb.md  mitbih.md  ptbxl.md  qtdb.md  synthetic.md
docs/experiments/: index.md
docs/guides/: byot.ipynb  ecg-foundation-model copy.ipynb  ecg-foundation-model.ipynb  evb-setup.md  heartkit-demo.md  index.md  rhythm-demo.md  train-arrhythmia-model.ipynb  train-ecg-denoiser.ipynb  train-ecg-segmentation.ipynb
docs/models/: beat.md  byom.md  efficientnet.md  index.md  mobileone.md  resnet.md  tcn.md  unet.md  unext.md
docs/modes/: configuration.md  demo.md  download.md  evaluate.md  export.md  index.md  train.md
docs/segmentation/: demo.md  methods.md  overview.md  results.md
docs/tasks/: arrhythmia.md  beat.md  byot.md  denoise.md  diagnostic.md  index.md  rhythm.md  segmentation.md
docs/tutorials/: arrhythmia-demo.md  evb-setup.md  heartkit-demo.md
docs/usage/: cli.md  python.md
docs/zoo/: arr-2-eff-sm.md  arr-4-eff-sm.md  arrhythmia.md  beat-2-eff-sm.md  beat-3-eff-sm.md  beat.md  den-ppg-tcn-sm.md  den-tcn-lg.md  den-tcn-sm.md  denoise.md  index.md  rhythm.md  seg-2-tcn-sm.md  seg-4-tcn-lg.md  seg-4-tcn-sm.md  seg-ppg-2-tcn-sm.md  segmentation.md
ecgarr/: __init__.py  __main__.py  app.py  demo.py  deploy.py  evaluate.py  evaluation.py  metrics.py  segmentation.py  train.py  types.py  utils.py
ecgarr/datasets/: __init__.py  dataset.py  download.py  icentia11k.py  ludb.py  types.py  utils.py
ecgarr/models/: __init__.py  features.py  optimizers.py  pooling.py  resnet1d.py  transformer.py  utils.py
ecgarr/pretraining/: datasets.py  trainer.py  utils.py
ecgarr/rpc/: generic_data.py  utils.py
ecgarr/tasks/: __init__.py  cpc.py
evb/: Makefile  README.md  autogen.mk
evb/make/: helpers.mk  jlink.mk  neuralspot_config.mk
evb/src/: arrhythmia_model_buffer.h  beat_model_buffer.h  constants.h  heartkit.cc  heartkit.h  main.cc  main.h  max86150.cc  max86150.h  max86150_addons.h  model.cc  model.h  model_buffer.h  model_buffer.h.random  ns_io_i2c.c  ns_io_i2c.h  physiokit.cc  physiokit.h  preprocessing.cc  preprocessing.h  segmentation_model_buffer.h  sensor.cc  sensor.h  stimulus.h  store.cc  store.h  usb_handler.c  usb_handler.cc  usb_handler.h
heartkit/: __init__.py  __main__.py  app.py  arrhythmia.py  beat.py  cli.py  defines.py  demo.py  demo2.py  evaluate.py  export.py  hrv.py  metrics.py  segmentation.py  tasks.py  train.py  types.py  utils.py
heartkit/arrhythmia/: __init__.py  defines.py  demo.py  evaluate.py  export.py  train.py  utils.py
heartkit/assets/: __init__.py
heartkit/backends/: __init__.py  backend.py  evb.py  pc.py  utils.py
heartkit/beat/: defines.py  demo.py  evaluate.py  export.py  train.py  utils.py
js/: custom.js
neuralspot/: __init__.py
notebooks/: byot.ipynb  ecg-foundation-model.ipynb  ecg-segmentation.ipynb  heartkit-demo.ipynb  spectrogram-cnn.ipynb  train-arrhythmia-model.ipynb  train-ecg-denoiser.ipynb  train-ecg-segmentation.ipynb
overview/: index.html
results/: README.md  index.html
scripts/: gen_ref_pages.py  upload_to_model_zoo.py
search/: search_index.json
tests/: app_test.py  test_app.py
(+309 files in other folders)
