[tool.poetry]
name = "heartkit"
version = "1.2.0"
description = "AI driven heart monitoring kit for ultra low-power wearables."
license = "BSD-3-Clause"
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
packages = [
    { include = "heartkit" },
]

include = [
    { path = "tests", format = "sdist" },
    { path = "./heartkit/cfg/*.json"}
]

[tool.poetry.scripts]
heartkit = 'heartkit.cli:run'

[tool.taskipy.tasks]
format = "isort --profile black heartkit && black --line-length 120 heartkit"
lint = "pylint heartkit"
test = "pytest tests/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:Call to deprecated create:DeprecationWarning",
    "ignore:distutils Version:DeprecationWarning",
    "ignore:The register_cmap function:PendingDeprecationWarning"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = {version = "^2.15.0", platform = "darwin"}
tensorflow = {version = "^2.15.0", markers = "sys_platform != 'darwin'"}
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
wfdb = "^4.1.2"
tensorflow-metal = {version = "^1.1.0", platform = "darwin"}
fastparquet = "^2023.10.1"
plotly = "^5.18.0"
tqdm = "^4.66.1"
seaborn = "^0.13.2"
matplotlib = "3.8.2"
tensorflow-model-optimization = "^0.7.5"
pydantic = "^2.5.3"
erpc = {git = "https://github.com/AmbiqAI/erpc.git", rev = "develop", subdirectory = "erpc_python"}
pyserial = "^3.5"
rich = "^13.7.0"
wandb = "^0.16.3"
scipy = "^1.12.0"
boto3 = "^1.34.36"
orjson = "^3.9.13"
physiokit = "^0.8.1"
requests = "^2.31.0"
argdantic = {extras = ["all"], version = "^1.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ipython = "^8.21.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
taskipy = "^1.12.0"
pre-commit = "^3.6.0"
notebook = "^7.0.2"
tensorboard-plugin-profile = "^2.14.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"
mkdocstrings-python = "^1.8.0"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120

[tool.pylint.master]
ignore-paths = [
    "heartkit/rpc/GenericDataOperations_EvbToPc",
    "heartkit/rpc/GenericDataOperations_PcToEvb"
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.message_control]
disable = [
    "unused-argument",
    "missing-module-docstring",
    "too-few-public-methods",
    "invalid-name",
    "logging-fstring-interpolation",
    "duplicate-code",
    "use-dict-literal",
    "unnecessary-lambda-assignment",
    "cell-var-from-loop"
]

[tool.pylint.format]
max-line-length = 140

[tool.pylint.design]
max-args = 50
max-locals = 50
max-statements = 100
max-module-lines = 2000
max-attributes = 20
max-branches = 50
max-returns = 20

[tool.pyright]

reportShadowedImports = "none"
