[tool.poetry]
name = "heartkit"
version = "1.5.1"
description = "AI driven heart monitoring kit for ultra low-power wearables."
license = "BSD-3-Clause"
authors = ["Ambiq AI <support.aitg@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiqai.github.io/heartkit"
repository = "https://github.com/AmbiqAI/heartkit"
packages = [
    { include = "heartkit" },
]

include = [
    { path = "tests", format = "sdist" },
    { path = "./heartkit/assets/**/*"},
]

[tool.poetry.scripts]
heartkit = 'heartkit.cli:main'

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
test = "pytest tests/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:Call to deprecated create:DeprecationWarning",
    "ignore:distutils Version:DeprecationWarning",
    "ignore:The register_cmap function:PendingDeprecationWarning"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = {version = "^2.17.0"}
tensorflow-metal = {version = "^1.1.0", markers = "sys_platform == 'darwin'"}
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
wfdb = "^4.1.2"
fastparquet = "^2023.10.1"
plotly = "^5.18.0"
tqdm = "^4.66.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
pydantic = "^2.5.3"
pyserial = "^3.5"
rich = "^13.7.0"
wandb = "^0.16.3"
scipy = "^1.12.0"
boto3 = "^1.34.36"
orjson = "^3.9.13"
physiokit = "^0.8.1"
requests = "^2.31.0"
argdantic = {extras = ["all"], version = "^1.0.0"}
neuralspot-edge = "~0.2.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
pytest = "^8.0.0"
taskipy = "^1.12.0"
pre-commit = "^3.6.0"
notebook = "^7.0.2"
tensorboard-plugin-profile = "^2.14.0"
pydot = "^2.0.0"

ruff = "^0.5.1"
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.8"
mkdocstrings-python = "^1.8.0"
markdown-include = "^0.8.1"
mkdocs-exclude = "^1.0.2"
mkdocs-jupyter = "^0.24.8"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.9"
mkdocs-literate-nav = "^0.6.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = [
    "heartkit/backends/GenericDataOperations_EvbToPc",
    "heartkit/backends/GenericDataOperations_PcToEvb",
    "heartkit/backends/erpc"
]

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
reportShadowedImports = "none"
