[project]
name = "heartkit"
version = "1.8.0"
description = "AI driven heart monitoring kit for ultra low-power wearables."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Ambiq AI", email = "support.aitg@ambiq.com" },
]
requires-python = ">=3.12,<3.14"

dependencies = [
  "tensorflow>=2.20.0,<3.0",
  "tensorflow-metal>=1.1.0,<2.0; sys_platform == 'darwin'",
  "numpy>=2.1.0,<3.0",
  "scikit-learn>=1.4.0,<2.0",
  "wfdb>=4.1.2,<5.0",
  "fastparquet>=2023.10.1,<2024.0",
  "plotly>=5.18.0,<6.0",
  "tqdm>=4.66.1,<5.0",
  "seaborn>=0.13.2,<1.0",
  "matplotlib>=3.9.0,<4.0",
  "pydantic>=2.5.3,<3.0",
  "pyserial>=3.5,<4.0",
  "rich>=13.7.0,<14.0",
  "wandb>=0.17.0,<1.0",
  "scipy>=1.12.0,<2.0",
  "boto3>=1.34.36,<2.0",
  "orjson>=3.9.13,<4.0",
  "physiokit>=0.10.1,<1.0",
  "requests>=2.31.0,<3.0",
  "argdantic[all]>=1.0.0,<2.0",
  "helia-edge>=0.4.1",
  "pysz>=1.0.2",
]

[project.scripts]
heartkit = "heartkit.cli:main"

[dependency-groups]
dev = [
  "ipython>=8.21.0,<9.0",
  "pytest>=8.0.0,<9.0",
  "taskipy>=1.12.0,<2.0",
  "pre-commit>=3.6.0,<4.0",
  "notebook>=7.0.2,<8.0",
  "tensorboard-plugin-profile>=2.14.0,<=2.19.8",
  "pydot>=2.0.0,<3.0",
  "ruff>=0.5.1,<1.0",
]
docs = [
  "mkdocs>=1.5.3,<2.0",
  "mkdocs-material>=9.5.8,<10.0",
  "mkdocstrings-python>=1.8.0,<2.0",
  "markdown-include>=0.8.1,<1.0",
  "mkdocs-exclude>=1.0.2,<2.0",
  "mkdocs-jupyter>=0.24.8,<1.0",
  "mkdocs-gen-files>=0.5.0,<1.0",
  "mkdocs-section-index>=0.3.9,<1.0",
  "mkdocs-literate-nav>=0.6.1,<1.0",
  "black>=24.8.0,<25.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ["heartkit"]
include-package-data = true

[tool.setuptools.package-data]
"heartkit" = ["assets/**/*"]

[tool.setuptools.packages.find]
where  = ["."]
include = ["heartkit*"]

[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
test = "pytest tests/"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Call to deprecated create:DeprecationWarning",
  "ignore:distutils Version:DeprecationWarning",
  "ignore:The register_cmap function:PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
extend-exclude = [
  "heartkit/backends/GenericDataOperations_EvbToPc",
  "heartkit/backends/GenericDataOperations_PcToEvb",
  "heartkit/backends/erpc",
]

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
reportShadowedImports = "none"

[tool.uv]
package = true
